<resources>
    <string name="app_name">师傅上门Pro</string>
    <string name="text">text</string>
    <string name="welcome_tips">欢迎进入师傅上门Pro服务平台</string>
    <string name="tab_home">首页</string>
    <string name="tab_follw">关注</string>
    <string name="tab_me">个人</string>
    <string name="app">师傅上门Pro服务平台</string>
    <string name="app_mall">师傅上门Pro商城</string>
    <string name="tab_gd">我的工单</string>
    <string name="tab_sc">我的商城</string>
    <string name="tab_ygd">已供灯</string>
    <string name="tab_ypd">已排队</string>
    <string name="tab_yyy">已预约</string>
    <string name="tab_shoppingcart">购物车</string>
    <string name="tab_all">全部</string>
    <string name="search">搜索</string>
    <string name="press_again_to_exit">再按一次退出</string>
    <string name="scoll_aware_fab_behavior">.view.ScollAwareFABBehavior</string>
    <string name="pingding">token failed</string>
    <string name="lxrPhone">4006061314</string>
    <string name="tips_current_not_login">当前未登录</string>
    <string name="btn_follow_click_login">点击登录，精彩不再错过</string>
    <string name="btn_click_login">点击登录</string>
    <string name="mine_follow">关注</string>
    <string name="mine_fans">粉丝</string>
    <string name="mine_recharge">充值</string>
    <string name="mine_starlight">我的星光</string>
    <string name="mine_contribution">星光贡献榜</string>
    <string name="mine_watch">观看历史</string>
    <string name="mine_level">我的等级</string>
    <string name="mine_task">任务中心</string>
    <string name="mine_game">游戏中心</string>
    <string name="mine_setting">设置</string>
    <string name="mie_follow_people">关注的人</string>
    <string name="mine_follow_curriculum">关注课程</string>
    <string name="login">登录</string>
    <string name="signup">注册</string>
    <string name="go_signup">立即注册</string>
    <string name="lable_username_number">用户名/手机号</string>
    <string name="lable_password">密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="third_party_login">快捷登录</string>
    <string name="no_fw">未服务</string>
    <string name="yes_fw">服务中</string>
    <string name="no_sh">待审核</string>
    <string name="yes_wc">已完成</string>
    <string name="recommend_more">更多</string>
    <string name="network_unavailable">网络状态不佳</string>
    <string name="page_load_failed">加载失败…</string>
    <string name="swipe_down_to_refresh">暂时没有数据哦～</string>
    <string name="current_version_">拜师学艺APP %1$s</string>
    <string name="about">关于</string>
    <string name="author_">Author:</string>
    <string name="email_">Email:</string>
    <string name="csdn_">CSDN:</string>
    <string name="github_">Github:</string>
    <string name="hint_search">请输入关键字进行搜索</string>
    <string name="tips_search_keywords_cannot_be_empty">搜索关键字不能为空</string>
    <string name="islive">正在直播</string>
    <string name="can_not_find_relevant_content">找不到你想要的内容，换个关键词试试！</string>
    <string name="no_more">没有更多了</string>
    <string name="no_more_ture">暂时没有数据哦～</string>
    <string name="author_jenly">zz</string>
    <string name="email_jenly"><u>zz1314@gmail.com</u></string>
    <string name="csdn_jenly"><u>http://blog.csdn.net/zz121</u></string>
    <string name="github_jenly"><u>https://github.com/zz1314</u></string>
    <string name="mine_order">我的订单</string>
    <string name="mine_GXB">贡献榜</string>
    <string name="mine_order_all">查看全部订单</string>
    <string name="nopayment">待付款</string>
    <string name="all_order">全部</string>
    <string name="nogoods_receipt">待收货</string>
    <string name="nogoods_receipt2">待发货</string>
    <string name="noevaluate">待评价</string>
    <string name="customer">售后</string>
    <string name="Learning_files">学习档案</string>
    <string name="my_kecheng">我的课程</string>
    <string name="my_account">我的账户</string>
    <string name="participate_scene">参与现场</string>
    <string name="member_lv">会员升级</string>
    <string name="receipt_address">收货地址</string>
    <string name="shop_collocation">商品收藏</string>
    <string name="Recommender">推荐人</string>
    <string name="help">帮助</string>
    <string name="Sex">性别</string>
    <string name="NickName">昵称</string>
    <string name="Signature">个性签名</string>
    <string name="fk">意见反馈</string>
    <string name="my_fans">我的粉丝</string>
    <string name="set">设置</string>
    <string name="my_tutor">我是导师</string>
    <string name="my_student">我是学员</string>
    <string name="my_Apprentice">我的学生</string>
    <string name="home_tuijian">名师推荐</string>
    <string name="home_xianchang">名师现场</string>
    <string name="home_zhidian">名师指点</string>
    <string name="home_kecheng">名师课程</string>
    <string name="home_ls_kecheng">精彩课程</string>
    <string name="home_ls_huifang">精彩回放</string>
    <string name="accont_avatar">头像</string>
    <string name="account_name">昵称</string>
    <string name="account_phone">电话</string>
    <string name="account_sex">性别</string>
    <string name="account_signature">签名</string>
    <string name="personal_account">个人信息</string>
    <string name="news">消息中心</string>
    <string name="hot_search_keyword">热门搜索</string>
    <string name="search_hostory">历史记录</string>
    <string name="login_activity_et_input_phone">请输入手机号</string>
    <string name="login_phone_yzm">请输入验证码</string>
    <string name="set_blacklist">黑名单</string>
    <string name="set_cache">清除缓存</string>
    <string name="set_up">版本更新</string>
    <string name="set_outlogin">退出登录</string>
    <string name="help_help">使用帮助</string>
    <string name="help_msstatement">关于名师传艺声明</string>
    <string name="help_app">APP介绍</string>
    <string name="recommender_phone">请输入推荐人手机号</string>
    <string name="OK">确定</string>
    <string name="save">保存</string>
    <string name="western_instruments">西洋乐器</string>
    <string name="ethnic_instruments">名族乐器</string>
    <string name="popular_instruments">流行乐器</string>
    <string name="leyou_bbs">乐友论坛</string>
    <string name="posting_bbs">发帖</string>
    <string name="hot_topic">热门话题</string>
    <string name="bbs_comments_ex">说点什么吧？</string>
    <string name="bbs_details_name">帖子详情</string>
    <string name="all_commnets">全部回复</string>
    <string name="tuijian_goods">推荐商品</string>
    <string name="reply">回复</string>
    <string name="live">直播</string>
    <string name="my_shouyi">直播收益</string>
    <string name="ds_teaching">教学收益</string>
    <string name="person_notice">课堂通知</string>
    <string name="customer_service">客服</string>
    <string name="customer_service_text">点击查看您与客服的沟通记录</string>
    <string name="private_letter">私信</string>
    <string name="private_zhidian">指点</string>
    <string name="private_letter_text">您收到新的私信消息</string>
    <string name="comment">评论</string>
    <string name="comment_text">您收到新的评论</string>
    <string name="system">系统通知</string>
    <string name="system_text">您收到新的系统通知</string>
    <string name="play_immediately">立即播放</string>
    <string name="collection">收藏</string>
    <string name="add_to_cart">加入购物车</string>
    <string name="buy_now">立即购买</string>
    <string name="pay_now">立即付款</string>
    <string name="goods_details">商品详情</string>
    <string name="tuwen_details">图文详情</string>
    <string name="goods_parameter">产品参数</string>
    <string name="comments">评价</string>
    <string name="authentic_guarantee">正品保证</string>
    <string name="service_guarantee">服务保证</string>
    <string name="logistics_guarantee">物流保证</string>
    <string name="specifications">规格</string>
    <string name="xhl">选好了</string>
    <string name="collect_yes">收藏成功</string>
    <string name="choose_topic">选择话题</string>
    <string name="post_bbs_content_hit">请填写帖子内容</string>
    <string name="submit">提交</string>
    <string name="dialog_input_text_hint">开启弹幕互动吧</string>
    <string name="send">发送</string>
    <string name="live_end_tips">直播结束啦!</string>
    <string name="live_time_tips">直播时长</string>
    <string name="live_members_tips">观看人数</string>
    <string name="live_admires_tips">获赞数量</string>
    <string name="btn_return_home">返回首页</string>
    <string name="tip_force_offline">您的帐号已在其它地方登录</string>
    <string name="float_window_not_allow">悬浮窗权限未开启 请在应用-权限中打开悬浮窗权限</string>
    <string name="zuanshi">福分:</string>
    <string name="future_generations">全选</string>
    <string name="delete">删除</string>
    <string name="a_total_of">合计:</string>
    <string name="settlement">去结算</string>
    <string name="editor">编辑</string>
    <string name="shopping_cart">购物车</string>
    <string name="complete">完成</string>
    <string name="gwc_kong">您的购物车是空的噢</string>
    <string name="guess_you_like">猜你喜欢</string>
    <string name="waiting_payment">等待付款</string>
    <string name="psfs">配送方式</string>
    <string name="invoice_looked_up">发票抬头</string>
    <string name="buyer_message">买家留言</string>
    <string name="pay_type">支付方式</string>
    <string name="zhifubao">支付宝</string>
    <string name="weixin">微信</string>
    <string name="default_address">默认地址</string>
    <string name="shrxm">收货人</string>
    <string name="lxr">联系人</string>
    <string name="phone">联系电话</string>
    <string name="szqy">所在区域</string>
    <string name="xxdz">详细地址</string>
    <string name="ybm">已报名</string>
    <string name="diamond_vip">钻石会员</string>
    <string name="period_of_validity">有效期</string>
    <string name="renewal">续费</string>
    <string name="jubao">举报</string>
    <string name="jinyan">禁言</string>
    <string name="upgrade_immediately">立即升级</string>
    <string name="silver_ticket_agreement">《银票提现协议》</string>
    <string name="convertible_benefit">可兑换收益（元）</string>
    <string name="silver_ticket_balance">银票余额</string>
    <string name="cash_account">提现账号</string>
    <string name="withdrawal_of_silver_ticket">提现银票</string>
    <string name="to_book_value">到账金额</string>
    <string name="please_enter_the_votes_of_silver">请输入银票数</string>
    <string name="withdrawal">提现</string>
    <string name="live_earnings">直播收益</string>
    <string name="withdrawal_record">提现记录</string>
    <string name="bind_pay_account">绑定提现账号</string>
    <string name="course_notice">在这里填写课程通知</string>
    <string name="no_note">暂无备注</string>
    <string name="order">接单</string>
    <string name="wait_order_detail">待接单详情</string>
    <string name="wait_order">待接单</string>
    <string name="map">查看地图</string>
    <string name="cutomer_server">联系客服</string>
    <string name="order_note">注：\n1.每个月最多可退非正常单3次\n2.当月满3次非正常退单，系统将停止派单\n3.正常原因退单，则无此限制</string>
    <string name="related_img">相关图片：</string>
    <string name="no_note_detail">备注：暂无备注</string>
    <string name="ok_order">确认接单</string>
    <string name="company">师傅上门网络科技（上海）股份有限公司</string>
    <string name="register">《用户注册协议》</string>
    <string name="red_agree">我同意并且阅读</string>
    <string name="register_now">立即注册</string>
    <string name="name">姓名</string>
    <string name="sex">性别</string>
    <string name="age">年龄</string>
    <string name="address">地址</string>
    <string name="phone_number">手机号</string>
    <string name="IDcard">身份证号</string>
    <string name="work_type">工种</string>
    <string name="work_age">工龄</string>
    <string name="skill">特殊技能</string>
    <string name="recommend">我的推荐人</string>
    <string name="no_recommend">暂无推荐人</string>
    <string name="no_skill">暂无特殊技能</string>
    <string name="pwd_length_no">密码长度不够</string>
    <string name="twice_diffent">两次输入不一致</string>
    <string name="input_pwd">请输入密码</string>
    <string name="send_code">验证码已发送</string>
    <string name="detail_method">施工方式：</string>
    <string name="detail_request">施工要求：</string>
    <string name="refund_reson">请填写退款原因</string>
    <string name="refund_reason_detail">请简要描述您退单的主要原因</string>
    <string name="commit">立即提交</string>
    <string name="change_conten">修改工单内容</string>
    <string name="et_area">施工面积(平方米)：</string>
    <string name="person_mesage">个人资料</string>
    <string name="change_pwd">修改密码</string>
    <string name="clean_cache">清除缓存</string>
    <string name="about_us">关于我们</string>
    <string name="rl_agreement">相关协议</string>
    <string name="exit">退出登录</string>
</resources>