<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <include layout="@layout/line_h" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/title_bg_color"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_addoredit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center_vertical|end"
                android:text="@string/refund_reson"
                android:textColor="@color/tx_l"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/close"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="19dp"
                android:background="@drawable/cha" />
        </RelativeLayout>

        <include layout="@layout/line_h" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="204dp"
            android:background="@color/white_bg">

            <EditText
                android:id="@+id/et_reason"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="13dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:paddingLeft="16dp"
                android:gravity="top"
                android:paddingTop="27dp"
                android:textColor="@color/gray_30"
                android:background="@drawable/bg_shengqingtuidan"
                android:hint="@string/refund_reason_detail"
                android:textColorHint="@color/gray_200"

                />


        </RelativeLayout>


        <Button
            android:id="@+id/btn_ok"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimaryDark"
            android:text="@string/commit"
            android:textColor="@color/white_bg"
            android:textSize="17sp" />

    </LinearLayout>
</RelativeLayout>